--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base_nodejs_typescript_api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project used as a basis for API creation with Hapi, JWT, Typescript and SequelizeJS",
   "main": "node server.js",
   "repository": {
     "url": "https://github.com/ocsacesar/base_nodejs_typescript_api.git"
@@ -11,6 +11,9 @@
     "tsc-watch": "tsc -w",
     "build": "gulp build",
     "start": "gulp build && node build/src/index.js",
+    "dev": "gulp build && node build/src/index.js -e dev",
+    "prod": "gulp build && node build/src/index.js -e prod",
+    "test": "gulp build && node build/src/index.js -e test",
     "setup": "npm install & typings install",
     "watch": "nodemon --watch build/src build/src/index.js"
   },
@@ -23,28 +26,30 @@
   "author": "Ovídio César",
   "license": "MIT",
   "dependencies": {
-    "boom": "^7.2.0",
-    "gulp": "^3.9.1",
-    "hapi": "^17.1.1",
-    "hapi-auth-jwt2": "^8.0.0",
-    "hapi-swagger": "^9.1.1",
-    "inert": "^5.1.0",
-    "joi": "^13.1.2",
-    "nconf": "^0.9.1",
-    "pg": "^7.4.0",
-    "reflect-metadata": "^0.1.10",
-    "sequelize": "^4.27.0",
-    "sequelize-typescript": "^0.6.1",
-    "vision": "^5.3.2"
+    "@types/minimist": "^1.2.0",
+    "boom": "7.3.0",
+    "colors": "^1.3.3",
+    "hapi": "18.0.0",
+    "hapi-auth-jwt2": "8.3.0",
+    "hapi-swagger": "9.3.0",
+    "inert": "5.1.2",
+    "joi": "14.3.1",
+    "nconf": "0.9.1",
+    "pg": "7.4.0",
+    "reflect-metadata": "0.1.10",
+    "sequelize": "4.27.0",
+    "sequelize-typescript": "0.6.1",
+    "vision": "5.4.4"
   },
   "devDependencies": {
-    "@types/node": "^8.0.57",
-    "gulp-env": "^0.4.0",
-    "gulp-mocha": "^4.3.1",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-shell": "^0.6.3",
-    "gulp-tslint": "^8.1.2",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "@types/node": "8.0.57",
+    "gulp": "^4.0.0",
+    "gulp-env": "0.4.0",
+    "gulp-mocha": "6.0.0",
+    "gulp-rimraf": "0.2.1",
+    "gulp-shell": "0.6.5",
+    "gulp-tslint": "8.1.2",
+    "tslint": "5.8.0",
+    "typescript": "2.6.2"
   }
 }
